# Microservices-FastAPI-Template

./: .env.example  .gitignore  Dockerfile  REDIS_KAFKA_QUICKSTART.md  kafka_consumer_all_topics.py  pyproject.toml  requirements.txt  run.py  test_connections.py
.github/instrutions/: system.instructions.md
.github/instuctions/: system.instructions.md
docs/: before-after-comparison.md  code-modularization.md  kafka-running-approach.md  redis-kafka-setup.md
src/: main.py
src/api/: endpoints.py
src/api/dependencies/: __init__.py  auth.py  kafka.py  redis.py  repository.py  session.py
src/api/routes/: __init__.py  auth.py  device.py  example_integration.py  health.py  user.py
src/cache/: decorators.py  patterns.py  redis.py
src/config/: events.py
src/config/settings/: base.py
src/middleware/: __init__.py  security.py
src/middleware/security/: __init__.py  config.py  enums.py  logger.py  manager.py  middleware.py  utils.py
src/models/db/: device.py  jwt.py  user.py
src/models/schemas/: __init__.py  auth.py  base.py  jwt.py  response.py  user.py
src/repository/: base.py  database.py  events.py  table.py
src/repository/crud/: base.py  device.py  jwt.py  user.py
src/securities/authorizations/: jwt.py  jwt_authentication.py
src/services/: __init__.py  connections.py
src/services/kafka/: __init__.py  config.py  manager.py  serializers.py  topics.py
src/services/redis/: __init__.py  client.py  utils.py
src/utilities/exceptions/: __init__.py  database.py  exceptions.py
src/utilities/logging/: __init__.py  audit.py  config.py  context.py  (+4 more)
(+15 files in other folders)
