[project]
name = "user-management-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiokafka>=0.12.0",
    "alembic>=1.16.2",
    "apscheduler>=3.11.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "authlib>=1.6.0",
    "cryptography>=45.0.4",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.0",
    "python-decouple>=3.8",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.3",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
]
